adding/styling div

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Document Content -->
+    <div class="sizing">
+      Example sizing div
+    </div>
   </body>
 </html>
