--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- Document Content -->
     <div class="sizing">
       Example sizing div
+      <span class="using-rem">Sized using REM</span>
+      <span class="using-em">Sized using EM</span>
     </div>
   </body>
 </html>
