--- a/index.html
+++ b/index.html
@@ -13,5 +13,11 @@
       <span class="using-rem">Sized using REM</span>
       <span class="using-em">Sized using EM</span>
     </div>
+
+    <div class="using-viewport">
+      <div class="using-percent">
+        
+      </div>
+    </div>
   </body>
 </html>
