using image contain

--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
 Sit amet consectetur adipiscing elit ut aliquam purus sit amet. Laoreet id donec ultrices tincidunt arcu non sodales neque. Enim diam vulputate ut pharetra. Ipsum suspendisse ultrices gravida dictum. Commodo ullamcorper a lacus vestibulum sed arcu non. Justo nec ultrices dui sapien eget. Fusce id velit ut tortor pretium viverra. Pretium quam vulputate dignissim suspendisse in est. A diam maecenas sed enim. Sed faucibus turpis in eu mi bibendum. Odio eu feugiat pretium nibh ipsum consequat nisl. Risus viverra adipiscing at in tellus.
       </div>
     </div>
+
+    <div class="image-contain"></div>
+    <div class="image-cover"></div>
   </body>
 </html>
